Coverity analysis defect 175760: Uninitialized scalar field

XMLWordPrintableJSON

    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2025-08-18, QE 2025-09-01, QE 2025-09-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /data/mci/20c67ff3d27bad330e12b569b00565a0/bazel_cache/1bc79c3474a85e2236e0c0bc2a63bda3/execroot/_main/src/mongo/db/exec/agg/cursor_stage.h:264: UNINIT_CTOR 175760 Class member declaration for "_queryFramework".
      /data/mci/20c67ff3d27bad330e12b569b00565a0/bazel_cache/1bc79c3474a85e2236e0c0bc2a63bda3/execroot/_main/src/mongo/db/exec/agg/cursor_stage.cpp:143: UNINIT_CTOR 175760 Non-static class member "_queryFramework" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Romans Kasperovics
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: