SERVER-108932 Remove unused CursorStage::_queryFramework (#41322)

GitOrigin-RevId: cf5a9aae699b8a6707073447e5ac5fe2b6626ff6